--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "email": "ting.kc.56@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.3"
+    }
 }
